--- a/Analysis of PDF Articles.Rmd
+++ b/Analysis of PDF Articles.Rmd
@@ -30,15 +30,19 @@ library(quanteda.sentiment)
 library(stringr)
 library(MASS)
 library(tidyverse)
-library(plyr)
-library(dplyr)
+library(plyr); library(dplyr)
 ```
 
 ## Extracting PDF Titles
 
 ```{r echo=TRUE}
-#extract the text for all pages
-nyt_files <- list.files(path = ".", pattern = "pdf$")
+
+# Get the data directory from readtext
+DATA_DIR <- system.file("extdata/", package = "readtext")
+#read in the pdf files
+(nyt_pdf <- readtext(paste0(DATA_DIR, "/pdf/./pdf_articles/*.pdf"), 
+                    docvarsfrom = "filenames", 
+                    docvarnames = c("document", "language")))
 ```
 
 ## Check Headlines
