--- a/_posts/welcome/welcome.Rmd
+++ b/_posts/welcome/welcome.Rmd
@@ -18,6 +18,7 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ```
 
+![](new.png)
 
 For this project, I am using some data gathered in the DACSS 602 course "Research Design". 
 
