update about with project info

--- a/about.Rmd
+++ b/about.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Contact Me Via GitHub, Twitter, LinkedIn, or on my Academic Blog"
+title: "Project Background and Summary"
 image: "initials.png"
 links:
   - label: '<i class="fab fa-github fa-1x"></i>'
@@ -11,9 +11,39 @@ links:
   - label: Blog
     url: "http://www.kristinabecvar.com"
 output:
-  postcards::jolla
-site: distill::distill_website  
+  distill::distill_article:
+    toc: true
 ---
 
+# NYT-Analysis
+
+## Previous Research
+
+For this project, I am using some data gathered in the DACSS 602 course "Research Design".  In the project for that course, my team and I posed the question:
+
+*How did the sentiment of news reporting on the U.S. withdrawal of Afghanistan shift over the period between when it was agreed upon between ex-President Trump and when it was executed by President Biden?*
+
+**Basic Research Design:**  Text Coding with Accompanying Survey
+
+**Text Coding Method:**  We analyzed news coverage of the U.S. withdrawal from Afghanistan during the period leading up to and following the day the last of the U.S. forces left Aghanistan. 
+
+**Data Sample:**  We coded articles that mention Afghanistan from the time of the Doha Agreement (February 29, 2020) through September 30, 2021, following the Congressional testimonies conducted September 28-29, 2021 regarding the withdrawal. The articles were collected from the New York Times and the Wall Street Journal World and News sections.
+
+**Methods/Text Coding Categories:**
+
+Source: Whether the article is from the New York Times or Wall Street Journal
+Military Source: Whether there is a quote from a U.S.  military spokesperson, leader, or commander	
+Conflict Veteran Source: 	Whether there is a quote from a U.S. military veteran who served in Afghanistan	
+Emotionality Rating:	How the coder felt while reading the article
+		
+**Outcomes:**  
+
+The article source (NYT v. WSJ) served as a moderator, with the outcomes being the analysis of media frames ‘before and after’ (Trump admin v. Biden admin). 
+
+## Current Project
+
+I continued down the same path but with new data and a new direction through the DACSS 697D course "Text as Data".
+
+More background data can be found in [this series of posts](https://www.kristinabecvar.com/) from my academic blog.
 
 
