--- a/_posts/lit-review/lit-review.Rmd
+++ b/_posts/lit-review/lit-review.Rmd
@@ -1,14 +1,21 @@
 ---
 title: "Literature Review"
 description: |
-  A short description of the post.
+  Text as Data Project-Literature Review
+categories:
+  - text as data
+  - NYT text analysis project
+  - literature review
 author:
   - name: Kristina Becvar
     url: https://kbec19.github.io/NYT-Analysis/
-date: 2022-04-23
+    affiliation: UMass DACSS Program (My Academic Blog Link)
+    affiliation_url: https://kristinabecvar.com
+slug: lit-review
+date: 04/15/2022
 output:
   distill::distill_article:
-    self_contained: false
+    toc: true
 ---
 
 
@@ -16,8 +23,63 @@ output:
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-Distill is a publication format for scientific and technical writing, native to the web.
+# Annotated Bibliography (Starting with Abstracts Only - In Development)
 
-Learn more about using Distill at <https://rstudio.github.io/distill>.
+* Chan, C., Bajjalieh, J., Auvil, L., Wessler, H., Althaus, S., Welbers, K., Atteveldt, W. van, & Jungblut, M. (2021). Four best practices for measuring news sentiment using ‘off-the-shelf’ dictionaries: A large-scale p-hacking experiment. Computational Communication Research, 3(1), 1–27.
 
+* Abstract
+
+We examined the validity of 37 sentiment scores based on dictionary-based methods using a large news corpus and demonstrated the risk of generating a spectrum of results with different levels of statistical significance by presenting an analysis of relationships between news sentiment and U.S. presidential approval. We summarize our findings into four best practices: 1) use a suitable sentiment dictionary; 2) do not assume that the validity and reliability of the dictionary is ‘built-in’; 3) check for the influence of content length and 4) do not use multiple dictionaries to test the same statistical hypothesis.
+
+* Burggraaff, C., & Trilling, D. (2020). Through a different gate: An automated content analysis of how online news and print news differ.  Journalism, 21(1), 112–129. https://doi.org/10.1177/1464884917716699
+
+* Abstract 
+
+We investigate how news values differ between online and print news articles. We hypothesize that print and online articles differ in terms of news values because of differences in the routines used to produce them. Based on a quantitative automated content analysis of N = 762,095 Dutch news items, we show that online news items are more likely to be follow-up items than print items, and that there are further differences regarding news values like references to persons, the power elite, negativity, and positivity. In order to conduct this large-scale analysis, we developed innovative methods to automatically code a wide range of news values. In particular, this article demonstrates how techniques such as sentiment analysis, named entity recognition, supervised machine learning, and automated queries of external databases can be combined and used to study journalistic content. Possible explanations for the difference found between online and offline news are discussed.
+
+* Silva, D. M. D. (2017). The Othering of Muslims: Discourses of Radicalization in the New York Times, 1969–2014. Sociological Forum, 32(1), 138–161. https://doi.org/10.1111/socf.12321
+
+* Abstract
+
+In this article, I engage with Edward Said’s Orientalism and various perspectives within the othering paradigm to analyze the emergence and transformation of radicalization discourses in the news media. Employing discourse analysis of 607 New York Times articles from 1969 to 2014, this article demonstrates that radicalization discourses are not new but are the result of complex sociolinguistic and historical developments that cannot be reduced to dominant contemporary understandings of the concept or to singular events or crises. The news articles were then compared to 850 government documents, speeches, and other official communications. The analysis of the data indicates that media conceptualizations of radicalization, which once denoted political and economic differences, have now shifted to overwhelmingly focus on Islam. As such, radicalization discourse now evokes the construct radicalization as symbolic marker of conflict between the West and the East. I also advanced the established notion that the news media employ strategic discursive strategies that contribute to conceptual distinctions that are used to construct Muslims as an “alien other” to the West.
+
+* Gottlieb, J. (2015). Protest News Framing Cycle: How The New York Times Covered Occupy Wall Street. International Journal of Communication, 9(0), 23.
+
+* Abstract
+
+This article introduces a protest news framing cycle and presents the results of a longitudinal analysis of news attention and framing of protest movements. To identify the frame-changing dynamic occurring over time, a content analysis of the news coverage of Occupy Wall Street was conducted on 228 articles and 37 editorials in The New York Times from the start of the protest in September 2011 until long after the protest had subsided in July 2014. The article identifies longitudinal changes in news frames about the economic substance of the protest and the ensuing conflict between protesters and city officials during the occupation. Findings suggest that conflict had a significant impact on the number of news stories about the protest. Further, the results demonstrate how news framing opportunities changed as the movement reached different stages of the news attention cycle. As the movement grew, journalists focused on the movement’s economic grievances, including economic inequality, bank bailouts, and foreclosures. As the movement peaked, news attention shifted to the intensifying conflict between city officials and protesters.
+
+
+* Diakopoulos, N. A. (2015). The Editor’s Eye: Curation and Comment Relevance on the New York Times. Proceedings of the 18th ACM Conference on Computer Supported Cooperative Work & Social Computing, 1153–1157. https://doi.org/10.1145/2675133.2675160
+
+* Abstract
+
+The journalistic curation of social media content from platforms like Facebook and YouTube or from commenting systems is underscored by an imperative for publishing accurate and quality content. This work explores the manifestation of editorial quality criteria in comments that have been curated and selected on the New York Times website as “NYT Picks.” The relationship between comment selection and comment relevance is examined through the analysis of 331,785 comments, including 12,542 editor’s selections. A robust association between editorial selection and article relevance or conversational relevance was found. The results are discussed in terms of their implications for reducing journalistic curatorial work load, or scaling the ability to examine more comments for editorial selection , as well as how end-user commenting experiences might be improved.
+
+* Grimmer, J., & Stewart, B. M. (2013). Text as Data: The Promise and Pitfalls of Automatic Content Analysis Methods for Political Texts. Political Analysis, 21(3), 267–297.
+
+* Abstract
+
+Politics and political conflict often occur in the written and spoken word. Scholars have long recognized this, but the massive costs of analyzing even moderately sized collections of texts have hindered their use in political science research. Here lies the promise of automated text analysis: it substantially reduces the costs of analyzing large collections of text. We provide a guide to this exciting new area of research and show how, in many instances, the methods have already obtained part of their promise. But there are pitfalls to using automated methods–they are no substitute for careful thought and close reading and require extensive and problem-specific validation. We survey a wide range of new methods, provide guidance on how to validate the output of the models, and clarify misconceptions and errors in the literature. To conclude, we argue that for automated text methods to become a standard tool for political scientists, methodologists must contribute new methods and new methods of validation.
+
+* Kothari, A. (2010). The Framing of the Darfur Conflict in the New York Times: 2003–2006. Journalism Studies, 11(2), 209–224. https://doi.org/10.1080/14616700903481978
+
+* Abstract
+
+This multi-method study examines how the New York Times reported the Darfur conflict in the Sudan, which has led to an estimated 300,000 deaths and over 2.3 million people displaced by the fighting. Drawing on normative media theories and prior studies of Africa's representation, the role of sources in the frame-building process was analyzed, together with the impact of news-making processes on journalists' reporting about Darfur. The textual analysis largely supports results of prior studies on news framing of Africa. However, interviews with four New York Times journalists reveal that the individual biases and motives of the journalists and their sources significantly influenced the coverage. While the journalists participated in news-making processes distinguishable by journalist goal, source availability, and source credibility, their sources also provided information that reinforced certain media frames.
+
+
+
+* Kiousis, S. (2004). Explicating Media Salience: A Factor Analysis of New York Times Issue Coverage During the 2000 U.S. Presidential Election. Journal of Communication, 54(1), 71–87. https://doi.org/10.1111/j.1460-2466.2004.tb02614.x
+
+* Abstract
+
+Media salience—the key independent variable in agenda-setting research—has traditionally been explicated as a singular construct. Nevertheless, scholars have defined and measured it using a number of different conceptualizations and empirical indicators. To address this limitation in research, this study introduced a conceptual model of media salience, suggesting it is a multidimensional construct consisting of 3 core elements: attention, prominence, and valence. Furthermore, the model was tested through an exploratory factor analysis of The New York Times news coverage of 8 major political issues during the 2000 presidential election as a case study. The data revealed that 2 dimensions of media salience emerge: visibility and valence. Based on the factor analysis, 2 indices are created to measure the construct, which are intended for use in future investigations.
+
+
+
+
+
+
+     
 
